arreglo de registro

--- a/app/src/main/res/layout-v21/activity_auth.xml
+++ b/app/src/main/res/layout-v21/activity_auth.xml
@@ -7,7 +7,7 @@
     android:background="#202732"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".AuthActivity">
+    tools:context=".interface_captcam.AuthActivity">
 
 
     <ImageView
