--- a/app/src/main/res/layout/activity_homeusuario.xml
+++ b/app/src/main/res/layout/activity_homeusuario.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".homeUsuario">
+    tools:context=".interface_captcam.homeUsuario">
 
     <ImageView
         android:id="@+id/ImgUsuario"
