base de datos en linea registro BD

--- a/app/src/main/res/layout/activity_homeusuario.xml
+++ b/app/src/main/res/layout/activity_homeusuario.xml
@@ -69,4 +69,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnActivar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="activar Seguridad"
+        tools:layout_editor_absoluteX="125dp"
+        tools:layout_editor_absoluteY="563dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
