--- a/app/src/main/res/layout/tfe_od_activity_camera.xml
+++ b/app/src/main/res/layout/tfe_od_activity_camera.xml
@@ -64,7 +64,7 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_add1"
+        android:id="@+id/fab_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|top"
