--- a/app/src/main/res/layout-v21/activity_auth.xml
+++ b/app/src/main/res/layout-v21/activity_auth.xml
@@ -7,7 +7,7 @@
     android:background="#202732"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".interface_captcam.AuthActivity">
+    tools:context=".interface_captcam.authActivity">
 
 
     <ImageView
@@ -56,7 +56,6 @@
             android:layout_width="192dp"
             android:layout_height="wrap_content"
             android:background="@drawable/button_ingresar"
-            android:onClick="btnIngresar"
             android:text="Ingresar">
 
         </Button>
@@ -68,7 +67,6 @@
             android:layout_height="wrap_content"
             android:background="@drawable/button_rounded"
             android:ems="10"
-            android:onClick="BotonRegistro"
             android:text="Registrar" />
 
 
@@ -87,13 +85,13 @@
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="35dp" />
+
         <Button
             android:id="@+id/btnSalir"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_rounded"
             android:ems="10"
-            android:onClick="BotonSalir"
             android:text="Salir" />
     </LinearLayout>
 
