--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context="UISRAEL.JCofre.CAPTCAM.Registro">
+    tools:context="UISRAEL.JCofre.CAPTCAM.registroUsuario">
 
     <ImageView
         android:id="@+id/imageViewId"
@@ -14,23 +14,50 @@
         android:layout_width="match_parent"
         android:layout_height="48pt" />
 
-    <Button
-        android:id="@+id/btnTomarFoto"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
 
-        android:text="TOMAR FOTO" />
+        android:orientation="horizontal">
+
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation_view"
+            android:layout_width="96dp"
+            android:layout_height="58dp"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="44293-camera.json"
+            app:lottie_imageAssetsFolder="assets"
+            app:lottie_loop="true" />
+        <Button
+            android:id="@+id/btnTomarFoto"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+
+            android:text="TOMAR FOTO" />
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation_view2"
+            android:layout_width="96dp"
+            android:layout_height="58dp"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="44293-camera.json"
+            app:lottie_imageAssetsFolder="assets"
+            app:lottie_loop="true" />
+
+    </LinearLayout>
+
+
+
 
     <EditText
         android:id="@+id/edNombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:cursorVisible="false"
         android:ems="10"
-
         android:hint="Nombre del usuario"
-        android:inputType="textPersonName"
-        />
+        android:inputType="textPersonName" />
 
 
 
@@ -86,3 +113,5 @@
 
 
 </LinearLayout>
+
+
