--- a/app/src/main/res/layout/tfe_od_layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/tfe_od_layout_bottom_sheet.xml
@@ -9,6 +9,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="8dp"
+    android:visibility="invisible"
     app:behavior_hideable="true"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
@@ -74,7 +75,6 @@
             android:text="640*480"
             android:textColor="@android:color/black" />
     </LinearLayout>
-
 
 
     <LinearLayout
@@ -156,7 +156,8 @@
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_marginTop="10dp"
-        android:background="@android:color/darker_gray" />
+        android:background="@android:color/darker_gray"
+        android:visibility="invisible" />
 
     <!-- TODO(b/112541284): Unhide when new NNAPI delegate is used. -->
     <LinearLayout
