--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context="UISRAEL.JCofre.CAPTCAM.registroUsuario">
 
     <ImageView
         android:id="@+id/imageViewId"
-        android:layout_weight="9"
         android:layout_width="match_parent"
-        android:layout_height="48pt" />
+        android:layout_height="368dp" />
 
 
     <LinearLayout
@@ -30,12 +29,14 @@
             app:lottie_fileName="44293-camera.json"
             app:lottie_imageAssetsFolder="assets"
             app:lottie_loop="true" />
+
         <Button
             android:id="@+id/btnTomarFoto"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_width="215dp"
+            android:layout_height="match_parent"
 
             android:text="TOMAR FOTO" />
+
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/animation_view2"
             android:layout_width="96dp"
@@ -48,8 +49,6 @@
     </LinearLayout>
 
 
-
-
     <EditText
         android:id="@+id/edNombre"
         android:layout_width="wrap_content"
@@ -60,15 +59,13 @@
         android:inputType="textPersonName" />
 
 
-
     <EditText
         android:id="@+id/edCorreo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Correo del usuario"
-        android:inputType="textPersonName"
-        />
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/edPassword"
@@ -86,6 +83,12 @@
         android:ems="10"
         android:hint="Confirmar Password"
         android:inputType="textPersonName|textPassword" />
+
+    <Button
+        android:id="@+id/guardarRostro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="GUARDAR ROSTRO" />
 
     <LinearLayout
         android:layout_width="match_parent"
