--- a/app/src/main/res/layout/tfe_od_activity_camera.xml
+++ b/app/src/main/res/layout/tfe_od_activity_camera.xml
@@ -68,19 +68,19 @@
         android:contentDescription="TODO" />
 
 
+    <!--     <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|top"
+            android:layout_margin="16dp"
+            android:contentDescription="TODO"
+            android:src="@android:drawable/ic_input_add"
+            android:tint="@android:color/white"
+            android:visibility="invisible" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|top"
-        android:tint="@android:color/white"
-        android:src="@android:drawable/ic_input_add"
-        android:layout_margin="16dp"
-        android:contentDescription="TODO" />
 
-
-<!--    <View-->
+        <View-->
 <!--        android:id="@+id/dummy"-->
 <!--        android:layout_width="1dp"-->
 <!--        android:layout_height="80dp"-->
@@ -110,7 +110,7 @@
         app:layout_anchorGravity="top|end" />
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/animation_view"
+        android:id="@+id/fab_add"
         android:layout_width="328dp"
         android:layout_height="208dp"
         app:layout_anchor="@+id/bottom_sheet_layout"
