--- a/app/src/main/res/layout-v21/activity_auth.xml
+++ b/app/src/main/res/layout-v21/activity_auth.xml
@@ -54,6 +54,13 @@
 
     />
 
+    <Button
+        android:id="@+id/btnDemo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Demo"
+        android:background="@drawable/button_rounded"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="72dp"
@@ -67,7 +74,13 @@
             android:background="@drawable/button_ingresar"
             android:text="Ingresar">
 
+
         </Button>
+        <ProgressBar
+            android:id="@+id/pbCarga"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp" />
 
         <Button
 
@@ -89,12 +102,6 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <ProgressBar
-            android:id="@+id/pbCarga"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp" />
-
         <Button
             android:id="@+id/btnSalir"
             android:layout_width="match_parent"
@@ -102,6 +109,7 @@
             android:background="@drawable/button_rounded"
             android:ems="10"
             android:text="Salir" />
+
     </LinearLayout>
 
 
