--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -78,13 +78,7 @@
 
         android:inputType="textPersonName|textPassword" />
 
-    <EditText
-        android:id="@+id/edConfirmacionPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Confirmar Password"
-        android:inputType="textPersonName|textPassword" />
+
 
 
 
@@ -98,7 +92,7 @@
             android:id="@+id/btnGuardar"
             android:layout_width="204dp"
             android:layout_height="wrap_content"
-
+            android:layout_marginTop="35dp"
             android:background="@drawable/button_ingresar"
             android:text="Guardar" />
 
@@ -107,6 +101,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_rounded"
+            android:layout_marginTop="35dp"
 
             android:text="REGRESAR" />
 
